# CPUBot

./: Dockerfile  bot.py  docker-compose.yml  pyproject.toml
