[tool]
[tool.poetry]
name = "CPUBot"
version = "0.0.0"
authors = ["Jerry Wang <jwang20@choate.edu>"]
description = "Pythonic wrapper around pymongo that can act as a drop-in replacement for dataset"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiodns = ">=1.1.1"
aiohttp = ">=3.4.4"
async-timeout = ">=3.0.1"
attrs = ">=18.2.0"
cchardet = ">=2.1.4"
certifi = ">=2018.10.15"
chardet = ">=3.0.4"
"discord.py" = ">=1.2.3"
django = ">=2.2.5"
gunicorn = ">=19.9.0"
idna = ">=2.7"
idna-ssl = ">=1.1.0"
multidict = ">=4.4.2"
pycares = ">=2.3.0"
pytz = ">=2018.7"
requests = ">=2.20.0"
sqlparse = ">=0.3.0"
urllib3 = ">=1.25.3"
websockets = ">=6.0"
yarl = ">=1.2.6"
